src/test/ui/feature-gates/feature-gate-rustc-attrs.stderr
error[E0658]: used by the test suite
  --> $DIR/feature-gate-rustc-attrs.rs:3:1
   |
LL | #[rustc_dummy]
   | ^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(rustc_attrs)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
